<resources>
    <string name="app_name">DataBindSample</string>


    <string name="s40_1">签到</string>
    <string name="s40_2">我的奖励金</string>
    <string name="s40_3">立即使用</string>
    <string name="s40_4">已连续签到%1$s天</string>
    <string name="s40_5">连续签到可开启宝箱</string>
    <string name="s40_6">提醒</string>
    <string name="s40_7">签到玩法详情</string>
    <string name="s40_8">1.每日签到可获得奖金，连续签到天数越多，奖励金越高，还有宝箱奖励</string>
    <string name="s40_9">2.如果您断签，可以获得一天的补签资格。若未补签或断签两天以上，重新计算</string>
    <string name="s40_10"><![CDATA[3.奖励金将在您签到时，自动打入账户，可在<span style=\"color:#FFC13D\">【我的-钱包】</span>找到。有效期7天。奖励金可用来交易，获得的盈利可直接用来提现。]]></string>
    <string name="s40_11">神秘礼包</string>
    <string name="s40_12">已签到</string>
    <string name="s40_13">“XTrend Speed\"想访问您的日历</string>
    <string name="s40_14">XTrend Speed需要获取您的日历权限，以便正常使用签到提醒服务等</string>
    <string name="s40_15">申请补签</string>
    <string name="s40_16">今天</string>
    <string name="s40_17">签到成功</string>
    <string name="s40_18"><![CDATA[明天来签到可以获得<span style=\"color:#00BE7C\">%1$s美元</span>credit]]></string>
    <string name="s40_19"><![CDATA[明天来签到可以获得额外<span style=\"color:#00BE7C\">宝箱</span>奖励哦]]></string>
    <string name="s40_20">恭喜你开启宝箱</string>
    <string name="s40_21">回答题目，获得补签资格，仍然可以连续签到，获得更多奖励</string>
    <string name="s40_22">戳这个</string>
    <string name="s40_23">您已完成充值/交易补签任务，已为您补签成功</string>
    <string name="s40_24">哇，好棒！回答正确恭喜您已完成补签并获得当日奖励。</string>
    <string name="s40_25">很遗憾，回答错误。正确答案应该是%1$s哦，不要灰心，已为你补签成功，再接再厉吧</string>
    <string name="s40_26">做任务，获得补签资格，仍然可以连续签到，获得更多奖励。</string>
    <string name="s40_27">充值一次（任意金额）</string>
    <string name="s40_28">交易一次（现金）</string>
    <string name="s40_29">开启日历权限，获得签到提醒功能</string>
    <string name="s40_31">坚持签到赢奖励</string>
    <string name="s40_32">非常遗憾，由于您多日断签并且没有及时完成补签，累计签到天数已清空，请重新开始签到</string>
    <string name="s40_33">点此平仓按钮，可以关闭交易</string>
    <string name="s40_34">邀请规则</string>
    <string name="s40_35">我的邀请记录</string>
    <string name="s40_36">我的邀请进度</string>
    <string name="s40_37">邀请进度</string>
    <string name="s40_38">暂无邀请记录</string>
    <string name="s40_39">已注册</string>
    <string name="s40_40">已认证</string>
    <string name="s40_41">您已充值成功</string>
    <string name="s40_42">没有更多了</string>
    <string name="s40_43">1.XTrend Speed，一个差价合约交易平台，由Rynat Capital (Pty)有限公司拥有和运营，注册号为2004/005384/07。地址：南非豪登省约翰内斯堡诺斯克里夫街柳道路6号。邮政信箱：2195。</string>
    <string name="s40_44">2.Rynat Capital (Pty)有限公司由FSCA（金融部门行为管理局）监管，FCP许可证号码：23497。</string>
    <string name="s40_45">3.被邀请的用户需完成首次充值才能获得全部$5奖励金，只完成注册送$0.5,只完成账户认证送$1.5</string>
    <string name="s40_46">什么是奖励金</string>
    <string name="s40_47">它是XTrend发行的虚拟货币，可以从奖励金中提取利润</string>
    <string name="s40_48">它没什么用</string>
    <string name="s40_49">以下哪项是外汇交易符号？</string>
    <string name="s40_50">XAUUSD</string>
    <string name="s40_51">GBPUSD</string>
    <string name="s40_52">EURUSD指的是哪个两个国家/地区？</string>
    <string name="s40_53">英国/美国</string>
    <string name="s40_54">欧洲/美国</string>
    <string name="s40_55">以下烛台图是什么周期图？</string>
    <string name="s40_56">每日图表</string>
    <string name="s40_57">每周图表</string>
    <string name="s40_58">VIP会员有什么好处？</string>
    <string name="s40_59">0手续费</string>
    <string name="s40_60">没有用</string>
    <string name="s40_61">当市场看涨时，您如何获得利润？</string>
    <string name="s40_62">买</string>
    <string name="s40_63">卖</string>
    <string name="s40_64">欧元兑美元报价分别为1.08747和1.08757，它们相差多少点？</string>
    <string name="s40_65">10 个点</string>
    <string name="s40_66">1个点</string>
    <string name="s40_67">不允许</string>
    <string name="s40_68">去设置</string>
    <string name="s40_69">跟单是什么？</string>
    <string name="s40_70">客户能够自动复制另一个交易者的订单和交易活动。 社交交易平台使任何人都可以成为交易牛人和/或跟单者。如果您只是想自己交易，我们仍将确保您拥有最佳的交易体验。</string>
    <string name="s40_71">为什么要跟单？</string>
    <string name="s40_72">简单：使用社交功能管理交易资产非常直观，并且新老用户都可以轻松体验。</string>
    <string name="s40_73">多样性：多样性是降低交易风险的关键。 您可以通过复制不同的交易者在各个市场中分配您的投资资本。</string>
    <string name="s40_74">透明度：公开每个交易者的订单和跟踪记录，帮助所有XTrend Speed交易者在选择交易牛人时做出更明智的决策。</string>
    <string name="s40_75">作为跟单者</string>
    <string name="s40_76">复制其他人的跟单</string>
    <string name="s40_77">● 跟单就是复制牛人发布的品种和方向，以最新价格建仓，可选择规格和手数、止盈止损。</string>
    <string name="s40_78">● 跟单者可选择规格和手数、止盈止损</string>
    <string name="s40_79">● 未认证用户只能跟2单</string>
    <string name="s40_80">作为交易牛人</string>
    <string name="s40_81">发布跟单</string>
    <string name="s40_82">● 最近7个交易日（包括周末）满足以下条件，可以发布跟单：</string>
    <string name="s40_83">a)平仓笔数≥3</string>
    <string name="s40_84">b)总建仓保证金≥$100</string>
    <string name="s40_85">c)盈利率≥30%</string>
    <string name="s40_86">● 发布保证金≥40的订单即可被其他用户跟单/复制，即建现金单</string>
    <string name="s40_87">● 跟单者越多，得到的奖励金也会越多。</string>
    <string name="s40_88">跟单成功1笔交易可得$0.1奖励金，交易牛人每天最高可获得$100奖励金。</string>
    <string name="s40_89">已完成</string>
    <string name="s40_90">已超出当日可邀请人数上限</string>
    <string name="s6_42">$%1$s</string>
</resources>