<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="com.example.databindsample.SigningDataUtil" />

        <variable
            name="signingObj"
            type="com.example.databindsample.BindSingingObj" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_btn_bgcolor_v3"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_in_bg"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_credit_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_16dp"
                            android:layout_marginTop="@dimen/margin_20dp"
                            android:text="@string/s40_2"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_12sp" />


                        <TextView
                            android:id="@+id/tv_have_credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_credit_title"
                            android:layout_alignStart="@+id/tv_credit_title"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_24sp" />


                        <TextView
                            android:id="@+id/tv_go_credit_trade"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_30dp"
                            android:layout_below="@+id/tv_credit_title"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="right|bottom"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginEnd="@dimen/margin_16dp"
                            android:background="@drawable/white_round_stroke_20dp"
                            android:backgroundTint="@color/color_7D9EFF"
                            android:onClick="onSigningClick"
                            android:paddingLeft="@dimen/margin_11dp"
                            android:paddingTop="@dimen/margin_6dp"
                            android:paddingRight="@dimen/margin_11dp"
                            android:paddingBottom="@dimen/margin_6dp"
                            android:text="@string/s40_3"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_14sp" />

                    </RelativeLayout>


                    <!--签到日历-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_365dp"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_20dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:background="@drawable/sign_in_date_bg"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tv_sign_calendar_day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignStart="@+id/tv_sign_calendar_msg"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="@dimen/margin_18dp"
                                android:layout_marginTop="@dimen/margin_35dp"
                                android:layout_toStartOf="@+id/tv_sign_notif"
                                android:maxLines="1"
                                android:text="@{@string/s40_4(signingObj.continuousDay)}"
                                android:textColor="@color/app_main_black_v3"
                                android:textSize="@dimen/text_size_14sp" />
                            <!--                                android:text="@{@string/s40_4(signingObj.continuousDay)}"-->

                            <TextView
                                android:id="@+id/tv_sign_calendar_msg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_sign_calendar_day"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="@dimen/margin_18dp"
                                android:layout_marginTop="@dimen/margin_4dp"
                                android:layout_toStartOf="@+id/tv_sign_notif"
                                android:lineSpacingMultiplier="0.9"
                                android:text="@string/s40_5"
                                android:textColor="@color/app_trade_gray"
                                android:textSize="@dimen/text_size_12sp" />

                            <Switch
                                android:id="@+id/sb_sign_calendar_permission"
                                style="@style/signing_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginEnd="@dimen/margin_18dp"
                                android:layout_marginBottom="@dimen/margin_16dp" />

                            <TextView
                                android:id="@+id/tv_sign_notif"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/sb_sign_calendar_permission"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="@dimen/margin_18dp"
                                android:layout_marginBottom="@dimen/margin_4dp"
                                android:text="@string/s40_6"
                                android:textColor="@color/color_a7acba"
                                android:textSize="@dimen/text_size_12sp" />


                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_sign_in_item"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_18dp"
                                android:layout_marginTop="@dimen/margin_17dp"
                                android:layout_marginEnd="@dimen/margin_18dp"
                                android:overScrollMode="never" />


                            <Button
                                android:id="@+id/btn_sign"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/margin_50dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/margin_16dp"
                                android:background="@{SigningDataUtil.getStatusSignBtn(signingObj) }"
                                android:text="@{ SigningDataUtil.getStatusSignBtnText(signingObj) }"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_size_18sp"
                                android:visibility="@{signingObj != null ?View.VISIBLE:View.GONE }" />
                            <!--  android:background="@{SigningDataUtil.getStatusSignBtn(signingObj) }"-->
                            <!--                                  android:text="@{ SigningDataUtil.getStatusSignBtnText(signingObj) }"-->
                            <!--                                android:visibility="@{signingObj != null ?View.VISIBLE:View.GONE }" -->
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/margin_16dp"
                    android:paddingEnd="@dimen/margin_16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_23dp"
                        android:text="@string/s40_7"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:text="@string/s40_8"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12dp"
                        android:text="@string/s40_9"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />

                    <TextView
                        android:id="@+id/tv_sign_info_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12dp"
                        android:layout_marginBottom="@dimen/margin_60dp"
                        android:text="@string/s40_10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>